--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/src/assets/favcon-forgeboard.png" />
+    <link rel="icon" type="image/png" href="/favcon-forgeboard.png" />
+    <script>
+      (function (l) {
+        if (l.search && l.search[1] === '/') {
+          const decoded = l.search
+            .slice(1)
+            .split('&')
+            .map((s) => s.replace(/~and~/g, '&'))
+            .join('?');
+          const base = '/ForgeBoard';
+          window.history.replaceState(null, null, base + decoded + l.hash);
+        }
+      })(window.location);
+    </script>
     <title>ForgeBoard - Freelancer Success Platform</title>
   </head>
   <body>
